[tool.poetry]
name = "thinkdsp-kim"
version = "0.1.0"
description = "DSP utilities from the Think DSP book"
authors = ["Allen Downey <allen.downey@olin.edu>"]
maintainers = ["Kim Maxim <maksimkim005@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "thinkdsp", from = "src" }]
include = ["LICENSE"]
exclude = ["book", "code", ".devcontainer", ".github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Signal Processing",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.19.4"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
jupyter = { version = "^1.0.0", optional = true }
pandas = { version = "^1.1.4", optional = true }
seaborn = { version = "^0.11.0", optional = true }

[tool.poetry.extras]
notebooks = ["jupyter", "pandas", "seaborn"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
